@@ -1,5 +1,5 @@
 #
-# $Id: makefile.nt,v 1.61 2004/01/04 04:26:24 ronpinkas Exp $
+# $Id: makefile.nt,v 1.62 2004/01/18 13:04:24 paultucker Exp $
 #
 
 #
@@ -196,20 +196,20 @@ VM_LIB_OPT_GUI   =$(LIB_DIR)\optgui.lib
 VMMT_LIB_OPT_CON =$(LIB_DIR)\optcon$(MT).lib
 VMMT_LIB_OPT_GUI =$(LIB_DIR)\optgui$(MT).lib
 
-GTCGI_LIB    =$(LIB_DIR)\gtcgi.lib
-GTDOS_LIB    =$(LIB_DIR)\gtdos.lib
-GTNUL_LIB    =$(LIB_DIR)\gtnul.lib
-GTPCA_LIB    =$(LIB_DIR)\gtpca.lib
-GTSTD_LIB    =$(LIB_DIR)\gtstd.lib
-GTWIN_LIB    =$(LIB_DIR)\gtwin.lib
-GTWVT_LIB    =$(LIB_DIR)\gtwvt.lib
+GTCGI_LIB        =$(LIB_DIR)\gtcgi.lib
+GTDOS_LIB        =$(LIB_DIR)\gtdos.lib
+GTNUL_LIB        =$(LIB_DIR)\gtnul.lib
+GTPCA_LIB        =$(LIB_DIR)\gtpca.lib
+GTSTD_LIB        =$(LIB_DIR)\gtstd.lib
+GTWIN_LIB        =$(LIB_DIR)\gtwin.lib
+GTWVT_LIB        =$(LIB_DIR)\gtwvt.lib
 
-HARBOUR_EXE  =$(BIN_DIR)\harbour.exe
-HBPP_EXE     =$(BIN_DIR)\hbpp.exe
-HBRUN_EXE    =$(BIN_DIR)\hbrun$(MT).exe
-HBTEST_EXE   =$(BIN_DIR)\hbtest.exe
-HBDOC_EXE    =$(BIN_DIR)\hbdoc.exe
-HBMAKE_EXE   =$(BIN_DIR)\hbmake.exe
+HARBOUR_EXE      =$(BIN_DIR)\harbour.exe
+HBPP_EXE         =$(BIN_DIR)\hbpp.exe
+HBRUN_EXE        =$(BIN_DIR)\hbrun$(MT).exe
+HBTEST_EXE       =$(BIN_DIR)\hbtest.exe
+HBDOC_EXE        =$(BIN_DIR)\hbdoc.exe
+HBMAKE_EXE       =$(BIN_DIR)\hbmake.exe
 
 #
 # GT driver list
@@ -373,6 +373,7 @@ RTL_LIB_OBJS = \
    $(OBJ_DIR)$(MT)\gt.obj \
    $(OBJ_DIR)$(MT)\gtapi.obj \
    $(OBJ_DIR)$(MT)\gtapiu.obj \
+   $(OBJ_DIR)$(MT)\gtgraph.obj \
    $(OBJ_DIR)$(MT)\gx.obj \
    $(OBJ_DIR)$(MT)\hardcr.obj \
    $(OBJ_DIR)$(MT)\hbbitf.obj \
@@ -489,9 +490,9 @@ RTL_LIB_OBJS = \
    $(OBJ_DIR)$(MT)\fieldbl.obj \
    $(OBJ_DIR)$(MT)\getlist.obj \
    $(OBJ_DIR)$(MT)\getsys.obj \
+   $(OBJ_DIR)$(MT)\hbini.obj \
    $(OBJ_DIR)$(MT)\hblog.obj \
    $(OBJ_DIR)$(MT)\hblognet.obj \
-   $(OBJ_DIR)$(MT)\hbini.obj \
    $(OBJ_DIR)$(MT)\hbserial.obj \
    $(OBJ_DIR)$(MT)\input.obj \
    $(OBJ_DIR)$(MT)\listbox.obj \
@@ -560,6 +561,7 @@ LANG_LIB_OBJS = \
    $(OBJ_DIR)\msghe862.obj \
    $(OBJ_DIR)\msghewin.obj \
    $(OBJ_DIR)\msghr852.obj \
+   $(OBJ_DIR)\msghr1250.obj \
    $(OBJ_DIR)\msghriso.obj \
    $(OBJ_DIR)\msghu852.obj \
    $(OBJ_DIR)\msghucwi.obj \
